--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="cmr-fcMg">
                 <div class="cmr-fcTopBox">
                     <h3>时运变迁</h3>
-                    <i class="fa fa-close"></i>
+                    <i class="fa fa-close fa-lg cmr-close"></i>
                 </div>
                 <div class="cmr-fcAction">
                     <div class="cmr-fcPrice">
