Basic function complete

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="cmr-addCar">加购物车</div>
     </div>
     <ul class="cmr-carInfos">
-        <li class="cmr-fcAddCar">
+        <!-- <li class="cmr-fcAddCar">
             <div class="cmr-fcImg">
                 <img src="./img/cover01.png" />
             </div>
@@ -87,7 +87,7 @@
                     <div class="cmr-fcDelete">删除</div>
                 </div>
             </div>
-        </li>
+        </li> -->
     </ul>
     <div class="cmr-toast">图书已加入购物车</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.2/js/swiper.min.js"></script>
